# texty

./: .gitignore  README.md  constraints.txt  dev-requirements.txt  dev.ipynb  evals.py  pyproject.toml  requirements.txt  texty.db
data/: concepts.jsonl  intros.jsonl
data/tests/future_detective/: intro.txt  objectives.jsonl  world.jsonl
model-server/: .gitignore  README.md  create_gptq.py  pyproject.toml  serve-llama-cpp.sh  serve.sh
model-server/src/model_server/: __init__.py
src/texty/: __init__.py  __main__.py  game.py  prompts.py
texty/: __init__.py  __main__.py  cli.py  database.py  eval_prompts.py  eval_utils.py  game.py  gamestate.py  gametypes.py  gradtest.py  io.py  parsing.py  prompts.py  prompts.tests.py  seeds.py  settings.py  test_gametypes.py  test_prompts.py  web.py
texty/dumpster/: database.py  eval_prompts.py  game.py  gamestate.py  prompts.py  test_prompts.py
texty/models/: model.py  vllm.py
texty/seeds/: blackwood_manor.json  lost_expedition.json  postapocalypse.json  time_travelers_dilemma.json  zantar.json
