[project]
name = "texty"
version = "0.1.0"
description = "Text Adventure!"
authors = [
    { name = "Adrian Lyjak", email = "adrianlyjak@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/texty"]
