[tool.poetry]
name = "texty"
version = "0.1.0"
description = ""
authors = ["Adrian Lyjak <adrianlyjak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
outlines = "0.0.41"
pydantic = ">=2.7.1"
pydantic-settings = ">=2.2.1"
rich = ">=13.7.1"
openai = "^1.35.5"
gradio = "^4.37.2"
# stupid workaround for outlines/vllm not freezing versions
numpy = "<2.0.0"
anthropic = "^0.30.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.4.2"
pytest = "^8.2.2"
inspect-ai = "^0.3.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
