[project]
name = "model-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Adrian Lyjak", email = "adrianlyjak@gmail.com" }
]
dependencies = [
    "vllm>=0.4.2",
    "accelerate>=0.30.1",
    "optimum>=1.19.2",
    "transformers>=4.41.1",
    "auto-gptq>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/model_server"]
